# pebble-hwv

./: .gitignore  CMakeLists.txt  README.md  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  no-serial.conf  prj.conf  rtt.conf  sample.yaml
app/src/: audio_data.c  audio_data.h  ble.c  buttons.c  buttons.h  charger.c  charger.h  display.c  display.h  flash.c  haptic.c  haptic.h  imu.c  light.c  light.h  mag.c  mag.h  main.c  mic.c  press.c  press.h  speaker.c  speaker.h
boards/coredevices/asterix_evt1/: asterix_evt1-pinctrl.dtsi  asterix_evt1.dts  asterix_evt1.yaml  asterix_evt1_defconfig  board.yml
boards/pebble/asterix_evt1/: Kconfig.asterix_evt1  Kconfig.defconfig  asterix_evt1-pinctrl.dtsi  asterix_evt1.dts  asterix_evt1.yaml  board.yml
boards/pebble/pebble_evb/: Kconfig  Kconfig.defconfig  Kconfig.pebble_evb  board.cmake  board.yml  openocd.cfg  pebble_evb_nrf5340_cpuapp-pinctrl.dtsi  pebble_evb_nrf5340_cpuapp.dts  (+4 more)
drivers/: CMakeLists.txt  Kconfig
drivers/display/: CMakeLists.txt  Kconfig  Kconfig.ls013b7dh05  display_ls013b7dh05.c
drivers/haptic/: CMakeLists.txt  Kconfig  Kconfig.drv2604  haptic_drv2604.c
drivers/input/: CMakeLists.txt  Kconfig  Kconfig.lsm6dso_tap  input_lsm6dso_tap.c
drivers/led/: CMakeLists.txt  Kconfig  Kconfig.lm3508  led_lm3508.c
drivers/sensor/: CMakeLists.txt  Kconfig
scripts/: power_get.py  wavgen.py
snippets/rtt-logging/: rtt-logging.conf
snippets/uart-logging/: snippet.yml  uart-logging.conf
subsys/: CMakeLists.txt  Kconfig
subsys/bluetooth/: Kconfig
(+17 files in other folders)
